Fix ticket section on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -384,6 +384,10 @@ h2 {
         align-items: center;
     }
     
+    .ticket-option {
+        width: calc(90% - 20px); 
+    }
+    
     .back-to-top {
         width: 32px;
         height: 32px;
